PRIMERPROYECTO/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ADMIRATION
    AS
    ASYNC
    BREAK
    CASE
    CATCH
    CLASS
    CONST
    CONSTRUCTOR
    CONTINUE
    DEFAULT
    DO
    ENUM
    EXTENDS
    EXTERNAL
    FACTORY
    FINAL
    FUNCTION
    GET
    HIDE
    IMPORT
    INFIX
    INIT
    INTERFACE
    IS
    LIBRARY
    NEQUAL
    NEW
    NULL
    OPEN
    OPERATOR
    OUT
    OVERRIDE
    PART
    SET
    SETPARAM
    STATIC
    SUPER
    SWITCH
    SYNC
    THIS
    THROW
    TRY
    TYPEALIAS
    TYPEOF
    WITH

Grammar

Rule 0     S' -> documento
Rule 1     documento -> implementa_funcion
Rule 2     documento -> instrucciones
Rule 3     cuerpoF -> asignacion
Rule 4     cuerpoF -> impresion
Rule 5     cuerpoF -> asignadores
Rule 6     cuerpoF -> comparators
Rule 7     cuerpoF -> list
Rule 8     cuerpoF -> mutableList
Rule 9     cuerpoF -> pair
Rule 10    cuerpoF -> inData
Rule 11    cuerpoF -> if
Rule 12    cuerpoF -> for
Rule 13    cuerpoF -> while
Rule 14    cuerpoF -> when
Rule 15    asignacion -> designacion VARIABLE DOUBLEPOINTS tipo IGUAL valor
Rule 16    designacion -> VAL
Rule 17    designacion -> VAR
Rule 18    tipo -> TINT
Rule 19    tipo -> TFLOAT
Rule 20    tipo -> STRING
Rule 21    diamondType -> MINOR tipo MAYOR
Rule 22    listAsignacion -> designacion VARIABLE DOUBLEPOINTS LIST diamondType
Rule 23    listAsignacion -> designacion VARIABLE
Rule 24    listOf -> LISTOF LPAREN elementos RPAREN
Rule 25    elementos -> elementos COMA valor
Rule 26    elementos -> valor
Rule 27    valor -> VINT
Rule 28    valor -> VFLOAT
Rule 29    valor -> STRING
Rule 30    list -> listAsignacion IGUAL listOf
Rule 31    add -> operado PLUS operado
Rule 32    subtract -> operado MINUS operado
Rule 33    multiply -> operado TIMES operado
Rule 34    divide -> operado DIVIDE operado
Rule 35    operado -> add
Rule 36    operado -> subtract
Rule 37    operado -> multiply
Rule 38    operado -> divide
Rule 39    operado -> dato
Rule 40    mutListAsignacion -> designacion VARIABLE DOUBLEPOINTS MUTABLELIST diamondType
Rule 41    mutListAsignacion -> designacion VARIABLE
Rule 42    mutableListOf -> MUTABLELISTOF LPAREN elementos RPAREN
Rule 43    mutableList -> mutListAsignacion IGUAL mutableListOf
Rule 44    pairAsignation -> designacion LPAREN VARIABLE COMA VARIABLE RPAREN
Rule 45    pairBody -> PAIR LPAREN valor COMA valor RPAREN
Rule 46    pair -> pairAsignation IGUAL pairBody
Rule 47    inData -> designacion VARIABLE IGUAL READLINE LPAREN RPAREN
Rule 48    compareType -> dato IGUAL IGUAL dato
Rule 49    compareNotEqual -> dato NOT IGUAL dato
Rule 50    comparators -> compareType
Rule 51    comparators -> compareGreaterthan
Rule 52    comparators -> compareSmallerthan
Rule 53    comparators -> compareNotEqual
Rule 54    compareGreaterthan -> dato MAYOR dato
Rule 55    compareSmallerthan -> dato MINOR dato
Rule 56    impresion -> PRINTLN LPAREN datoretornado RPAREN
Rule 57    datoretornado -> operado
Rule 58    datoretornado -> booly
Rule 59    condicion -> booly
Rule 60    booly -> comparators
Rule 61    booly -> logic
Rule 62    booly -> TRUE
Rule 63    booly -> FALSE
Rule 64    logic -> booly logicoperador booly
Rule 65    logic -> NOT booly
Rule 66    logicoperador -> AND
Rule 67    logicoperador -> OR
Rule 68    if -> IF LPAREN condicion RPAREN LKEY instrucciones RKEY
Rule 69    if -> IF LPAREN condicion RPAREN LKEY instrucciones RKEY else
Rule 70    if -> IF LPAREN condicion RPAREN LKEY instrucciones RKEY elseif else
Rule 71    elseif -> ELSE IF LPAREN condicion RPAREN LKEY instrucciones RKEY
Rule 72    else -> ELSE LKEY instrucciones RKEY
Rule 73    condicionFor -> condicionRango
Rule 74    condicionFor -> condicionBloque
Rule 75    condicionRango -> VARIABLE IN VINT DOT DOT VINT
Rule 76    condicionBloque -> VARIABLE IN LISTOF
Rule 77    for -> FOR LPAREN condicionFor RPAREN LKEY instrucciones RKEY
Rule 78    while -> WHILE LPAREN condicion RPAREN LKEY instrucciones RKEY
Rule 79    when -> WHEN LPAREN VARIABLE RPAREN LKEY instrucciones RKEY
Rule 80    implementa_funcion -> FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
Rule 81    implementa_funcion -> FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
Rule 82    implementa_funcion -> FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
Rule 83    implementa_funcion -> FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
Rule 84    listaparametros -> parametro
Rule 85    listaparametros -> parametro COMA listaparametros
Rule 86    parametro -> VARIABLE DOUBLEPOINTS tipo
Rule 87    retorno -> RETURN asignado
Rule 88    instrucciones -> cuerpoF
Rule 89    instrucciones -> cuerpoF instrucciones
Rule 90    asignadores -> asigna
Rule 91    asignadores -> plusasigna
Rule 92    asignadores -> minasigna
Rule 93    asignadores -> multasigna
Rule 94    asignadores -> divasigna
Rule 95    asigna -> VARIABLE IGUAL asignado
Rule 96    plusasigna -> VARIABLE PLUS IGUAL asignado
Rule 97    minasigna -> VARIABLE MINUS IGUAL asignado
Rule 98    multasigna -> VARIABLE TIMES IGUAL asignado
Rule 99    divasigna -> VARIABLE DIVIDE IGUAL asignado
Rule 100   asignado -> comparators
Rule 101   asignado -> operado
Rule 102   dato -> valor
Rule 103   dato -> VARIABLE

Terminals, with rules where they appear

ABSTRACT             : 
ADMIRATION           : 
AND                  : 66
AS                   : 
ASYNC                : 
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COMA                 : 25 44 45 85
CONST                : 
CONSTRUCTOR          : 
CONTINUE             : 
DEFAULT              : 
DIVIDE               : 34 99
DO                   : 
DOT                  : 75 75
DOUBLEPOINTS         : 15 22 40 80 81 82 83 86
ELSE                 : 71 72
ENUM                 : 
EXTENDS              : 
EXTERNAL             : 
FACTORY              : 
FALSE                : 63
FINAL                : 
FOR                  : 77
FUN                  : 80 81 82 83
FUNCTION             : 
GET                  : 
HIDE                 : 
IF                   : 68 69 70 71
IGUAL                : 15 30 43 46 47 48 48 49 95 96 97 98 99
IMPORT               : 
IN                   : 75 76
INFIX                : 
INIT                 : 
INTERFACE            : 
IS                   : 
LIBRARY              : 
LIST                 : 22
LISTOF               : 24 76
LKEY                 : 68 69 70 71 72 77 78 79 80 81 82 83
LPAREN               : 24 42 44 45 47 56 68 69 70 71 77 78 79 80 81 82 83
MAYOR                : 21 54
MINOR                : 21 55
MINUS                : 32 97
MUTABLELIST          : 40
MUTABLELISTOF        : 42
NEQUAL               : 
NEW                  : 
NOT                  : 49 65
NULL                 : 
OPEN                 : 
OPERATOR             : 
OR                   : 67
OUT                  : 
OVERRIDE             : 
PAIR                 : 45
PART                 : 
PLUS                 : 31 96
PRINTLN              : 56
READLINE             : 47
RETURN               : 87
RKEY                 : 68 69 70 71 72 77 78 79 80 81 82 83
RPAREN               : 24 42 44 45 47 56 68 69 70 71 77 78 79 80 81 82 83
SET                  : 
SETPARAM             : 
STATIC               : 
STRING               : 20 29
SUPER                : 
SWITCH               : 
SYNC                 : 
TFLOAT               : 19
THIS                 : 
THROW                : 
TIMES                : 33 98
TINT                 : 18
TRUE                 : 62
TRY                  : 
TYPEALIAS            : 
TYPEOF               : 
VAL                  : 16
VAR                  : 17
VARIABLE             : 15 22 23 40 41 44 44 47 75 76 79 80 81 82 83 86 95 96 97 98 99 103
VFLOAT               : 28
VINT                 : 27 75 75
VOID                 : 82 83
WHEN                 : 79
WHILE                : 78
WITH                 : 
error                : 

Nonterminals, with rules where they appear

add                  : 35
asigna               : 90
asignacion           : 3
asignado             : 87 95 96 97 98 99
asignadores          : 5
booly                : 58 59 64 64 65
comparators          : 6 60 100
compareGreaterthan   : 51
compareNotEqual      : 53
compareSmallerthan   : 52
compareType          : 50
condicion            : 68 69 70 71 78
condicionBloque      : 74
condicionFor         : 77
condicionRango       : 73
cuerpoF              : 88 89
dato                 : 39 48 48 49 49 54 54 55 55
datoretornado        : 56
designacion          : 15 22 23 40 41 44 47
diamondType          : 22 40
divasigna            : 94
divide               : 38
documento            : 0
elementos            : 24 25 42
else                 : 69 70
elseif               : 70
for                  : 12
if                   : 11
implementa_funcion   : 1
impresion            : 4
inData               : 10
instrucciones        : 2 68 69 70 71 72 77 78 79 80 81 82 83 89
list                 : 7
listAsignacion       : 30
listOf               : 30
listaparametros      : 80 83 85
logic                : 61
logicoperador        : 64
minasigna            : 92
multasigna           : 93
multiply             : 37
mutListAsignacion    : 43
mutableList          : 8
mutableListOf        : 43
operado              : 31 31 32 32 33 33 34 34 57 101
pair                 : 9
pairAsignation       : 46
pairBody             : 46
parametro            : 84 85
plusasigna           : 91
retorno              : 80 81
subtract             : 36
tipo                 : 15 21 80 81 86
valor                : 15 25 26 45 45 102
when                 : 14
while                : 13

Parsing method: LALR

state 0

    (0) S' -> . documento
    (1) documento -> . implementa_funcion
    (2) documento -> . instrucciones
    (80) implementa_funcion -> . FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (81) implementa_funcion -> . FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (82) implementa_funcion -> . FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
    (83) implementa_funcion -> . FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
    (88) instrucciones -> . cuerpoF
    (89) instrucciones -> . cuerpoF instrucciones
    (3) cuerpoF -> . asignacion
    (4) cuerpoF -> . impresion
    (5) cuerpoF -> . asignadores
    (6) cuerpoF -> . comparators
    (7) cuerpoF -> . list
    (8) cuerpoF -> . mutableList
    (9) cuerpoF -> . pair
    (10) cuerpoF -> . inData
    (11) cuerpoF -> . if
    (12) cuerpoF -> . for
    (13) cuerpoF -> . while
    (14) cuerpoF -> . when
    (15) asignacion -> . designacion VARIABLE DOUBLEPOINTS tipo IGUAL valor
    (56) impresion -> . PRINTLN LPAREN datoretornado RPAREN
    (90) asignadores -> . asigna
    (91) asignadores -> . plusasigna
    (92) asignadores -> . minasigna
    (93) asignadores -> . multasigna
    (94) asignadores -> . divasigna
    (50) comparators -> . compareType
    (51) comparators -> . compareGreaterthan
    (52) comparators -> . compareSmallerthan
    (53) comparators -> . compareNotEqual
    (30) list -> . listAsignacion IGUAL listOf
    (43) mutableList -> . mutListAsignacion IGUAL mutableListOf
    (46) pair -> . pairAsignation IGUAL pairBody
    (47) inData -> . designacion VARIABLE IGUAL READLINE LPAREN RPAREN
    (68) if -> . IF LPAREN condicion RPAREN LKEY instrucciones RKEY
    (69) if -> . IF LPAREN condicion RPAREN LKEY instrucciones RKEY else
    (70) if -> . IF LPAREN condicion RPAREN LKEY instrucciones RKEY elseif else
    (77) for -> . FOR LPAREN condicionFor RPAREN LKEY instrucciones RKEY
    (78) while -> . WHILE LPAREN condicion RPAREN LKEY instrucciones RKEY
    (79) when -> . WHEN LPAREN VARIABLE RPAREN LKEY instrucciones RKEY
    (16) designacion -> . VAL
    (17) designacion -> . VAR
    (95) asigna -> . VARIABLE IGUAL asignado
    (96) plusasigna -> . VARIABLE PLUS IGUAL asignado
    (97) minasigna -> . VARIABLE MINUS IGUAL asignado
    (98) multasigna -> . VARIABLE TIMES IGUAL asignado
    (99) divasigna -> . VARIABLE DIVIDE IGUAL asignado
    (48) compareType -> . dato IGUAL IGUAL dato
    (54) compareGreaterthan -> . dato MAYOR dato
    (55) compareSmallerthan -> . dato MINOR dato
    (49) compareNotEqual -> . dato NOT IGUAL dato
    (22) listAsignacion -> . designacion VARIABLE DOUBLEPOINTS LIST diamondType
    (23) listAsignacion -> . designacion VARIABLE
    (40) mutListAsignacion -> . designacion VARIABLE DOUBLEPOINTS MUTABLELIST diamondType
    (41) mutListAsignacion -> . designacion VARIABLE
    (44) pairAsignation -> . designacion LPAREN VARIABLE COMA VARIABLE RPAREN
    (102) dato -> . valor
    (103) dato -> . VARIABLE
    (27) valor -> . VINT
    (28) valor -> . VFLOAT
    (29) valor -> . STRING

    FUN             shift and go to state 4
    PRINTLN         shift and go to state 21
    IF              shift and go to state 34
    FOR             shift and go to state 35
    WHILE           shift and go to state 36
    WHEN            shift and go to state 37
    VAL             shift and go to state 38
    VAR             shift and go to state 39
    VARIABLE        shift and go to state 5
    VINT            shift and go to state 41
    VFLOAT          shift and go to state 42
    STRING          shift and go to state 43

    documento                      shift and go to state 1
    implementa_funcion             shift and go to state 2
    instrucciones                  shift and go to state 3
    cuerpoF                        shift and go to state 6
    asignacion                     shift and go to state 7
    impresion                      shift and go to state 8
    asignadores                    shift and go to state 9
    comparators                    shift and go to state 10
    list                           shift and go to state 11
    mutableList                    shift and go to state 12
    pair                           shift and go to state 13
    inData                         shift and go to state 14
    if                             shift and go to state 15
    for                            shift and go to state 16
    while                          shift and go to state 17
    when                           shift and go to state 18
    designacion                    shift and go to state 19
    valor                          shift and go to state 20
    asigna                         shift and go to state 22
    plusasigna                     shift and go to state 23
    minasigna                      shift and go to state 24
    multasigna                     shift and go to state 25
    divasigna                      shift and go to state 26
    compareType                    shift and go to state 27
    compareGreaterthan             shift and go to state 28
    compareSmallerthan             shift and go to state 29
    compareNotEqual                shift and go to state 30
    listAsignacion                 shift and go to state 31
    mutListAsignacion              shift and go to state 32
    pairAsignation                 shift and go to state 33
    dato                           shift and go to state 40

state 1

    (0) S' -> documento .



state 2

    (1) documento -> implementa_funcion .

    $end            reduce using rule 1 (documento -> implementa_funcion .)


state 3

    (2) documento -> instrucciones .

    $end            reduce using rule 2 (documento -> instrucciones .)


state 4

    (80) implementa_funcion -> FUN . VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (81) implementa_funcion -> FUN . VARIABLE LPAREN RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (82) implementa_funcion -> FUN . VARIABLE LPAREN RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
    (83) implementa_funcion -> FUN . VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY

    VARIABLE        shift and go to state 44


state 5

    (95) asigna -> VARIABLE . IGUAL asignado
    (96) plusasigna -> VARIABLE . PLUS IGUAL asignado
    (97) minasigna -> VARIABLE . MINUS IGUAL asignado
    (98) multasigna -> VARIABLE . TIMES IGUAL asignado
    (99) divasigna -> VARIABLE . DIVIDE IGUAL asignado
    (103) dato -> VARIABLE .

  ! shift/reduce conflict for IGUAL resolved as shift
    IGUAL           shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 49
    MAYOR           reduce using rule 103 (dato -> VARIABLE .)
    MINOR           reduce using rule 103 (dato -> VARIABLE .)
    NOT             reduce using rule 103 (dato -> VARIABLE .)

  ! IGUAL           [ reduce using rule 103 (dato -> VARIABLE .) ]


state 6

    (88) instrucciones -> cuerpoF .
    (89) instrucciones -> cuerpoF . instrucciones
    (88) instrucciones -> . cuerpoF
    (89) instrucciones -> . cuerpoF instrucciones
    (3) cuerpoF -> . asignacion
    (4) cuerpoF -> . impresion
    (5) cuerpoF -> . asignadores
    (6) cuerpoF -> . comparators
    (7) cuerpoF -> . list
    (8) cuerpoF -> . mutableList
    (9) cuerpoF -> . pair
    (10) cuerpoF -> . inData
    (11) cuerpoF -> . if
    (12) cuerpoF -> . for
    (13) cuerpoF -> . while
    (14) cuerpoF -> . when
    (15) asignacion -> . designacion VARIABLE DOUBLEPOINTS tipo IGUAL valor
    (56) impresion -> . PRINTLN LPAREN datoretornado RPAREN
    (90) asignadores -> . asigna
    (91) asignadores -> . plusasigna
    (92) asignadores -> . minasigna
    (93) asignadores -> . multasigna
    (94) asignadores -> . divasigna
    (50) comparators -> . compareType
    (51) comparators -> . compareGreaterthan
    (52) comparators -> . compareSmallerthan
    (53) comparators -> . compareNotEqual
    (30) list -> . listAsignacion IGUAL listOf
    (43) mutableList -> . mutListAsignacion IGUAL mutableListOf
    (46) pair -> . pairAsignation IGUAL pairBody
    (47) inData -> . designacion VARIABLE IGUAL READLINE LPAREN RPAREN
    (68) if -> . IF LPAREN condicion RPAREN LKEY instrucciones RKEY
    (69) if -> . IF LPAREN condicion RPAREN LKEY instrucciones RKEY else
    (70) if -> . IF LPAREN condicion RPAREN LKEY instrucciones RKEY elseif else
    (77) for -> . FOR LPAREN condicionFor RPAREN LKEY instrucciones RKEY
    (78) while -> . WHILE LPAREN condicion RPAREN LKEY instrucciones RKEY
    (79) when -> . WHEN LPAREN VARIABLE RPAREN LKEY instrucciones RKEY
    (16) designacion -> . VAL
    (17) designacion -> . VAR
    (95) asigna -> . VARIABLE IGUAL asignado
    (96) plusasigna -> . VARIABLE PLUS IGUAL asignado
    (97) minasigna -> . VARIABLE MINUS IGUAL asignado
    (98) multasigna -> . VARIABLE TIMES IGUAL asignado
    (99) divasigna -> . VARIABLE DIVIDE IGUAL asignado
    (48) compareType -> . dato IGUAL IGUAL dato
    (54) compareGreaterthan -> . dato MAYOR dato
    (55) compareSmallerthan -> . dato MINOR dato
    (49) compareNotEqual -> . dato NOT IGUAL dato
    (22) listAsignacion -> . designacion VARIABLE DOUBLEPOINTS LIST diamondType
    (23) listAsignacion -> . designacion VARIABLE
    (40) mutListAsignacion -> . designacion VARIABLE DOUBLEPOINTS MUTABLELIST diamondType
    (41) mutListAsignacion -> . designacion VARIABLE
    (44) pairAsignation -> . designacion LPAREN VARIABLE COMA VARIABLE RPAREN
    (102) dato -> . valor
    (103) dato -> . VARIABLE
    (27) valor -> . VINT
    (28) valor -> . VFLOAT
    (29) valor -> . STRING

    $end            reduce using rule 88 (instrucciones -> cuerpoF .)
    RKEY            reduce using rule 88 (instrucciones -> cuerpoF .)
    RETURN          reduce using rule 88 (instrucciones -> cuerpoF .)
    PRINTLN         shift and go to state 21
    IF              shift and go to state 34
    FOR             shift and go to state 35
    WHILE           shift and go to state 36
    WHEN            shift and go to state 37
    VAL             shift and go to state 38
    VAR             shift and go to state 39
    VARIABLE        shift and go to state 5
    VINT            shift and go to state 41
    VFLOAT          shift and go to state 42
    STRING          shift and go to state 43

    cuerpoF                        shift and go to state 6
    instrucciones                  shift and go to state 50
    asignacion                     shift and go to state 7
    impresion                      shift and go to state 8
    asignadores                    shift and go to state 9
    comparators                    shift and go to state 10
    list                           shift and go to state 11
    mutableList                    shift and go to state 12
    pair                           shift and go to state 13
    inData                         shift and go to state 14
    if                             shift and go to state 15
    for                            shift and go to state 16
    while                          shift and go to state 17
    when                           shift and go to state 18
    designacion                    shift and go to state 19
    valor                          shift and go to state 20
    asigna                         shift and go to state 22
    plusasigna                     shift and go to state 23
    minasigna                      shift and go to state 24
    multasigna                     shift and go to state 25
    divasigna                      shift and go to state 26
    compareType                    shift and go to state 27
    compareGreaterthan             shift and go to state 28
    compareSmallerthan             shift and go to state 29
    compareNotEqual                shift and go to state 30
    listAsignacion                 shift and go to state 31
    mutListAsignacion              shift and go to state 32
    pairAsignation                 shift and go to state 33
    dato                           shift and go to state 40

state 7

    (3) cuerpoF -> asignacion .

    PRINTLN         reduce using rule 3 (cuerpoF -> asignacion .)
    IF              reduce using rule 3 (cuerpoF -> asignacion .)
    FOR             reduce using rule 3 (cuerpoF -> asignacion .)
    WHILE           reduce using rule 3 (cuerpoF -> asignacion .)
    WHEN            reduce using rule 3 (cuerpoF -> asignacion .)
    VAL             reduce using rule 3 (cuerpoF -> asignacion .)
    VAR             reduce using rule 3 (cuerpoF -> asignacion .)
    VARIABLE        reduce using rule 3 (cuerpoF -> asignacion .)
    VINT            reduce using rule 3 (cuerpoF -> asignacion .)
    VFLOAT          reduce using rule 3 (cuerpoF -> asignacion .)
    STRING          reduce using rule 3 (cuerpoF -> asignacion .)
    $end            reduce using rule 3 (cuerpoF -> asignacion .)
    RKEY            reduce using rule 3 (cuerpoF -> asignacion .)
    RETURN          reduce using rule 3 (cuerpoF -> asignacion .)


state 8

    (4) cuerpoF -> impresion .

    PRINTLN         reduce using rule 4 (cuerpoF -> impresion .)
    IF              reduce using rule 4 (cuerpoF -> impresion .)
    FOR             reduce using rule 4 (cuerpoF -> impresion .)
    WHILE           reduce using rule 4 (cuerpoF -> impresion .)
    WHEN            reduce using rule 4 (cuerpoF -> impresion .)
    VAL             reduce using rule 4 (cuerpoF -> impresion .)
    VAR             reduce using rule 4 (cuerpoF -> impresion .)
    VARIABLE        reduce using rule 4 (cuerpoF -> impresion .)
    VINT            reduce using rule 4 (cuerpoF -> impresion .)
    VFLOAT          reduce using rule 4 (cuerpoF -> impresion .)
    STRING          reduce using rule 4 (cuerpoF -> impresion .)
    $end            reduce using rule 4 (cuerpoF -> impresion .)
    RKEY            reduce using rule 4 (cuerpoF -> impresion .)
    RETURN          reduce using rule 4 (cuerpoF -> impresion .)


state 9

    (5) cuerpoF -> asignadores .

    PRINTLN         reduce using rule 5 (cuerpoF -> asignadores .)
    IF              reduce using rule 5 (cuerpoF -> asignadores .)
    FOR             reduce using rule 5 (cuerpoF -> asignadores .)
    WHILE           reduce using rule 5 (cuerpoF -> asignadores .)
    WHEN            reduce using rule 5 (cuerpoF -> asignadores .)
    VAL             reduce using rule 5 (cuerpoF -> asignadores .)
    VAR             reduce using rule 5 (cuerpoF -> asignadores .)
    VARIABLE        reduce using rule 5 (cuerpoF -> asignadores .)
    VINT            reduce using rule 5 (cuerpoF -> asignadores .)
    VFLOAT          reduce using rule 5 (cuerpoF -> asignadores .)
    STRING          reduce using rule 5 (cuerpoF -> asignadores .)
    $end            reduce using rule 5 (cuerpoF -> asignadores .)
    RKEY            reduce using rule 5 (cuerpoF -> asignadores .)
    RETURN          reduce using rule 5 (cuerpoF -> asignadores .)


state 10

    (6) cuerpoF -> comparators .

    PRINTLN         reduce using rule 6 (cuerpoF -> comparators .)
    IF              reduce using rule 6 (cuerpoF -> comparators .)
    FOR             reduce using rule 6 (cuerpoF -> comparators .)
    WHILE           reduce using rule 6 (cuerpoF -> comparators .)
    WHEN            reduce using rule 6 (cuerpoF -> comparators .)
    VAL             reduce using rule 6 (cuerpoF -> comparators .)
    VAR             reduce using rule 6 (cuerpoF -> comparators .)
    VARIABLE        reduce using rule 6 (cuerpoF -> comparators .)
    VINT            reduce using rule 6 (cuerpoF -> comparators .)
    VFLOAT          reduce using rule 6 (cuerpoF -> comparators .)
    STRING          reduce using rule 6 (cuerpoF -> comparators .)
    $end            reduce using rule 6 (cuerpoF -> comparators .)
    RKEY            reduce using rule 6 (cuerpoF -> comparators .)
    RETURN          reduce using rule 6 (cuerpoF -> comparators .)


state 11

    (7) cuerpoF -> list .

    PRINTLN         reduce using rule 7 (cuerpoF -> list .)
    IF              reduce using rule 7 (cuerpoF -> list .)
    FOR             reduce using rule 7 (cuerpoF -> list .)
    WHILE           reduce using rule 7 (cuerpoF -> list .)
    WHEN            reduce using rule 7 (cuerpoF -> list .)
    VAL             reduce using rule 7 (cuerpoF -> list .)
    VAR             reduce using rule 7 (cuerpoF -> list .)
    VARIABLE        reduce using rule 7 (cuerpoF -> list .)
    VINT            reduce using rule 7 (cuerpoF -> list .)
    VFLOAT          reduce using rule 7 (cuerpoF -> list .)
    STRING          reduce using rule 7 (cuerpoF -> list .)
    $end            reduce using rule 7 (cuerpoF -> list .)
    RKEY            reduce using rule 7 (cuerpoF -> list .)
    RETURN          reduce using rule 7 (cuerpoF -> list .)


state 12

    (8) cuerpoF -> mutableList .

    PRINTLN         reduce using rule 8 (cuerpoF -> mutableList .)
    IF              reduce using rule 8 (cuerpoF -> mutableList .)
    FOR             reduce using rule 8 (cuerpoF -> mutableList .)
    WHILE           reduce using rule 8 (cuerpoF -> mutableList .)
    WHEN            reduce using rule 8 (cuerpoF -> mutableList .)
    VAL             reduce using rule 8 (cuerpoF -> mutableList .)
    VAR             reduce using rule 8 (cuerpoF -> mutableList .)
    VARIABLE        reduce using rule 8 (cuerpoF -> mutableList .)
    VINT            reduce using rule 8 (cuerpoF -> mutableList .)
    VFLOAT          reduce using rule 8 (cuerpoF -> mutableList .)
    STRING          reduce using rule 8 (cuerpoF -> mutableList .)
    $end            reduce using rule 8 (cuerpoF -> mutableList .)
    RKEY            reduce using rule 8 (cuerpoF -> mutableList .)
    RETURN          reduce using rule 8 (cuerpoF -> mutableList .)


state 13

    (9) cuerpoF -> pair .

    PRINTLN         reduce using rule 9 (cuerpoF -> pair .)
    IF              reduce using rule 9 (cuerpoF -> pair .)
    FOR             reduce using rule 9 (cuerpoF -> pair .)
    WHILE           reduce using rule 9 (cuerpoF -> pair .)
    WHEN            reduce using rule 9 (cuerpoF -> pair .)
    VAL             reduce using rule 9 (cuerpoF -> pair .)
    VAR             reduce using rule 9 (cuerpoF -> pair .)
    VARIABLE        reduce using rule 9 (cuerpoF -> pair .)
    VINT            reduce using rule 9 (cuerpoF -> pair .)
    VFLOAT          reduce using rule 9 (cuerpoF -> pair .)
    STRING          reduce using rule 9 (cuerpoF -> pair .)
    $end            reduce using rule 9 (cuerpoF -> pair .)
    RKEY            reduce using rule 9 (cuerpoF -> pair .)
    RETURN          reduce using rule 9 (cuerpoF -> pair .)


state 14

    (10) cuerpoF -> inData .

    PRINTLN         reduce using rule 10 (cuerpoF -> inData .)
    IF              reduce using rule 10 (cuerpoF -> inData .)
    FOR             reduce using rule 10 (cuerpoF -> inData .)
    WHILE           reduce using rule 10 (cuerpoF -> inData .)
    WHEN            reduce using rule 10 (cuerpoF -> inData .)
    VAL             reduce using rule 10 (cuerpoF -> inData .)
    VAR             reduce using rule 10 (cuerpoF -> inData .)
    VARIABLE        reduce using rule 10 (cuerpoF -> inData .)
    VINT            reduce using rule 10 (cuerpoF -> inData .)
    VFLOAT          reduce using rule 10 (cuerpoF -> inData .)
    STRING          reduce using rule 10 (cuerpoF -> inData .)
    $end            reduce using rule 10 (cuerpoF -> inData .)
    RKEY            reduce using rule 10 (cuerpoF -> inData .)
    RETURN          reduce using rule 10 (cuerpoF -> inData .)


state 15

    (11) cuerpoF -> if .

    PRINTLN         reduce using rule 11 (cuerpoF -> if .)
    IF              reduce using rule 11 (cuerpoF -> if .)
    FOR             reduce using rule 11 (cuerpoF -> if .)
    WHILE           reduce using rule 11 (cuerpoF -> if .)
    WHEN            reduce using rule 11 (cuerpoF -> if .)
    VAL             reduce using rule 11 (cuerpoF -> if .)
    VAR             reduce using rule 11 (cuerpoF -> if .)
    VARIABLE        reduce using rule 11 (cuerpoF -> if .)
    VINT            reduce using rule 11 (cuerpoF -> if .)
    VFLOAT          reduce using rule 11 (cuerpoF -> if .)
    STRING          reduce using rule 11 (cuerpoF -> if .)
    $end            reduce using rule 11 (cuerpoF -> if .)
    RKEY            reduce using rule 11 (cuerpoF -> if .)
    RETURN          reduce using rule 11 (cuerpoF -> if .)


state 16

    (12) cuerpoF -> for .

    PRINTLN         reduce using rule 12 (cuerpoF -> for .)
    IF              reduce using rule 12 (cuerpoF -> for .)
    FOR             reduce using rule 12 (cuerpoF -> for .)
    WHILE           reduce using rule 12 (cuerpoF -> for .)
    WHEN            reduce using rule 12 (cuerpoF -> for .)
    VAL             reduce using rule 12 (cuerpoF -> for .)
    VAR             reduce using rule 12 (cuerpoF -> for .)
    VARIABLE        reduce using rule 12 (cuerpoF -> for .)
    VINT            reduce using rule 12 (cuerpoF -> for .)
    VFLOAT          reduce using rule 12 (cuerpoF -> for .)
    STRING          reduce using rule 12 (cuerpoF -> for .)
    $end            reduce using rule 12 (cuerpoF -> for .)
    RKEY            reduce using rule 12 (cuerpoF -> for .)
    RETURN          reduce using rule 12 (cuerpoF -> for .)


state 17

    (13) cuerpoF -> while .

    PRINTLN         reduce using rule 13 (cuerpoF -> while .)
    IF              reduce using rule 13 (cuerpoF -> while .)
    FOR             reduce using rule 13 (cuerpoF -> while .)
    WHILE           reduce using rule 13 (cuerpoF -> while .)
    WHEN            reduce using rule 13 (cuerpoF -> while .)
    VAL             reduce using rule 13 (cuerpoF -> while .)
    VAR             reduce using rule 13 (cuerpoF -> while .)
    VARIABLE        reduce using rule 13 (cuerpoF -> while .)
    VINT            reduce using rule 13 (cuerpoF -> while .)
    VFLOAT          reduce using rule 13 (cuerpoF -> while .)
    STRING          reduce using rule 13 (cuerpoF -> while .)
    $end            reduce using rule 13 (cuerpoF -> while .)
    RKEY            reduce using rule 13 (cuerpoF -> while .)
    RETURN          reduce using rule 13 (cuerpoF -> while .)


state 18

    (14) cuerpoF -> when .

    PRINTLN         reduce using rule 14 (cuerpoF -> when .)
    IF              reduce using rule 14 (cuerpoF -> when .)
    FOR             reduce using rule 14 (cuerpoF -> when .)
    WHILE           reduce using rule 14 (cuerpoF -> when .)
    WHEN            reduce using rule 14 (cuerpoF -> when .)
    VAL             reduce using rule 14 (cuerpoF -> when .)
    VAR             reduce using rule 14 (cuerpoF -> when .)
    VARIABLE        reduce using rule 14 (cuerpoF -> when .)
    VINT            reduce using rule 14 (cuerpoF -> when .)
    VFLOAT          reduce using rule 14 (cuerpoF -> when .)
    STRING          reduce using rule 14 (cuerpoF -> when .)
    $end            reduce using rule 14 (cuerpoF -> when .)
    RKEY            reduce using rule 14 (cuerpoF -> when .)
    RETURN          reduce using rule 14 (cuerpoF -> when .)


state 19
